CHANGES
=======

* Documenting and Sphinx conf

0.6.0
-----

* Documenting
* Fix tests and document
* Configure Sphinx and document
* Fix tests
* Configure Sphinx and document
* Change notation of IPs and Volumes to match Docker CLI
* Fix ports binding
* fix port bindings
* Add new API Ip def
* IP for docker v1.6
* Docker1.6 compatibility
* fix key error and sched tests
* pep8
* Optimize performances to 0.7sec per 100services
* Broken, too many recursions
* Fix scheduling mono service
* -2 Unworking but devided ps time by 2
* Flake8
* Add default file shaddock.yml
* Abandon less API calls as no change in result
* Reduce api calls
* refacto
* Global refactoring
* Refacto frontend
* Add ports bindings defintion possibility
* Fix scheduler
* PEP8 and tests
* PEP8 + Fix API TLS
* Move tests
* Write tests
* Model refactoring
* Refactoring multi-hosts
* Quick and dirty fix for checks in case of retry or sleep
* Update jinja2 requirement (again)
* Add jinja2 requirement
* Add jinja2 requirement
* Flake and pepe8 refacto
* Try catch list frontend
* Documentation in README Commenting Fix image_dir from model and CLI
* Remove pyvenv dir
* Correction IndentationError
* Update Authors and requirements
* Add Image definition from model Add multiple try catch errors Fix allow both definition of images and hosts by cli arg and model Fix Host display in list when no host specified (localhost)
* Add Jinja2 templating possibility
* Add hosts autoresolutions and include fonction, Services automaticaly takes hosts url from file in the model
* Add clusters definition
* gitignore
* pep8
* Add example infrastructure.yml
* Add mode ro for volumes
* adds the ability to split the infrastructure on multiple nodes
* adds the ability to split the infrastructure on multiple nodes
* Fix sed command to replace the right string
* merge add_services
* merge
* Document Boot2Docker tls support
* Document Boot2Docker tls support
* Add TLS support for Dcoker API
* Add Boot2Docker support
* change exple